--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.reportoffline.beli.ROBeliActivity"></activity>
+        <activity android:name=".activities.reportoffline.detailjual.ROJualDetailActivity"></activity>
+        <activity android:name=".activities.reportoffline.beli.ROBeliActivity" />
         <activity android:name=".activities.reportoffline.jual.ROJualActivity" />
         <activity android:name=".sinkron.kategori.SyncKategoriActivity" />
         <activity android:name=".activities.printer.PrintingActivity" />
