--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.reportoffline.grafik.harian.GrafikJualHarianActivity"></activity>
+        <activity android:name=".activities.reportoffline.revenue.RORevenueActivity"></activity>
+        <activity android:name=".activities.reportoffline.grafik.harian.GrafikJualHarianActivity" />
         <activity android:name=".activities.reportoffline.detailbeli.ROHistoriBeliDetailActivity" />
         <activity android:name=".activities.reportoffline.detailjual.ROJualDetailActivity" />
         <activity android:name=".activities.reportoffline.beli.ROBeliActivity" />
