--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.registrasi.RegistrasiSuksesActivity"></activity>
+        <activity android:name=".activities.pos.QrGopayActivity"></activity>
+        <activity android:name=".activities.registrasi.RegistrasiSuksesActivity" />
         <activity android:name=".activities.registrasi.RegistrasiActivity" />
         <activity android:name=".activities.register.RegisterActivity" />
         <activity android:name=".activities.massal.item.InputMassalProdukActivity" />
