dropdown kecamatan,kota,propinsi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.propinsi.PilihPropinsiActivity"></activity>
+        <activity android:name=".activities.kecamatan.KecamatanActivity"></activity>
+        <activity android:name=".activities.kota.KotaActivity" />
+        <activity android:name=".activities.propinsi.PilihPropinsiActivity" />
         <activity android:name=".activities.pos.QrGopayActivity" />
         <activity android:name=".activities.registrasi.RegistrasiSuksesActivity" />
         <activity android:name=".activities.registrasi.RegistrasiActivity" />
